# gsoc2019-ltsp

./: AUTHORS  README.md  TODO.md
debian/: changelog  ltsp.initramfs  rules
liveclone/: uefi-boot.cfg
liveclone/dracut/: README.md
liveclone/scripts/: ltsp-deleted  ltsp-functions.sh
liveclone/scripts/init-bottom/: ltsp-bottom
liveclone/scripts/init-premount/: ltsp-premount
ltsp/: README.md  ltsp  ltsp.sh
ltsp/applets/image/: 35-image.sh  55-image.sh  65-mksquashfs
ltsp/applets/info/: 55-info.sh
ltsp/applets/initrd/: 35-initrd.sh  55-initrd.sh  65-cpio.sh  65-finalize.sh  ini2sh.awk
ltsp/applets/kernel/: 55-kernel.sh
ltsp/applets/ltsp/: 55-image-functions.sh  55-ltsp.sh
ltsp/applets/ltsp-info/: 50-ltsp-info.sh
ltsp/applets/ltsp-initrd/: 55-ltsp-initrd.sh  ini2sh.awk
ltsp/applets/ltsp-kernel/: ltsp-kernel-go.8  ltsp-update-kernels
ltsp/client/init/: 35-environment.sh  45-networking.sh  55-cron.sh  55-display-manager.sh  55-init.sh  55-networking.sh  55-pam.sh  55-various.sh  56-rm-services.sh  init
ltsp/client/initrd-bottom/: 55-initrd-bottom.sh  README.md
ltsp/client/login/: pamltsp  pwmerge
ltsp/common/info/: 55-info.sh
ltsp/common/initrd/: 35-initrd.sh
ltsp/common/ltsp/: 55-config.sh  55-image-functions.sh  55-images.sh  55-ltsp.sh  client-test.conf
ltsp/configs/: boot.ipxe  dnsmasq.conf  grub.cfg
ltsp/initrd/: README.md
ltsp/initrd/ltsp/: init
ltsp/initrd/scripts/: ltsp-deleted  ltsp-functions.sh
ltsp/server/client.conf/: client.conf
ltsp/server/dnsmasq/: 55-dnsmasq.sh  ltsp-dnsmasq.conf
ltsp/server/image/: 35-image.sh  55-cleanup.sh  65-mksquashfs.sh
ltsp/server/initrd/: 35-initrd.sh  initrd-test.conf
ltsp/server/ipxe/: 55-ipxe.sh  boot.ipxe  grub.cfg  ltsp.ipxe
ltsp/server/kernel/: 55-kernel.sh
ltsp/server/nfs/: 55-nfs.sh  ltsp-nfs.exports
ltsp/tools/ltsp-config/: 50-ltsp-config.sh
ltsp/tools/ltsp-initrd/: 55-ltsp-initrd.sh  ini2sh.sh  (+1 more)
man/: Makefile.am  Makefile.sh  lts.conf.5.md  ltsp-client.conf.5.md  ltsp-dnsmasq.8.md  ltsp-image.8.md  ltsp-initrd.8.md  ltsp-ipxe.8.md  ltsp-kernel.8.md  ltsp-nfs.8.md  ltsp.8.md  ltsp.conf.5.md
old/: overlay.sh  uefi-boot.md  uefi-boot.sh
(+30 files in other folders)
